--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 <style type="text/css">
     h1{
         color:red;
+        background color: red;
     }
     p{
         color:black;
+        text-align: center;
     }
     
 </style>
+
+
